ref #30364 - truncate scope name to max 30 chars, title with full name, correct linebreak, smaller edit pencil in vertical align middle

--- a/scss/layout/main-header.scss
+++ b/scss/layout/main-header.scss
@@ -29,7 +29,20 @@
         font-weight:        normal;
         line-height:        1.2em;
         vertical-align:     middle;
-        margin-left:		-1.4em;
+        margin-left:		-1em;
+        
+        .header-scope {
+        	div {
+        		float:left;
+        		margin-right:20px;
+        		white-space:nowrap;
+        		vertical-align:middle;
+        	};
+        	.icon {
+        		font-size:1em;
+        		margin-left:20px;
+        	}
+        }
     }
     .right {
         @extend 
